# confidential-computing-zoo

./: #main.py#  .env.example  .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  Dockerfile  LICENSE.txt  README.md  TESTING.md  THIRD-PARTY-PROGRAMS.txt  architecture.md  build_docker_image.sh  config.py  docker-compose.yml  kbs_service.py  luh_service.sh  main.py  models.py  pyproject.toml  requirements.txt  run_tests.ps1  run_tests.sh  services.py  setup.bat  setup.sh  start.ps1  start.sh  tdvm_smoke_test.py  test_api.py  test_runner.py  test_sequencer_refactor.py  test_subprocess_unit.py  test_tlog_impl.py  test_tlog_refactored.py  test_unit.py  tlog_daemon.py  trucon.py  trust_service.sh
cczoo/agent-cc/core/argus/: Cargo.toml  Dockerfile  README.md  README_CN.md  README_bak.md  docker-compose.yml  start_argus.sh
cczoo/agent-cc/core/tc-api/: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.sh  setup.sh  start.sh
cczoo/agent-cc/core/tdx-quote/: Cargo.toml
cczoo/attestation-secret-provision/secret_provision/: CMakeLists.txt
cczoo/attestation-secret-provision/secret_provision/cmake/: cJSON.cmake  cpr.cmake  grpc.cmake
cczoo/attestation-secret-provision/secret_provision/example/: CMakeLists.txt  example.cpp
cczoo/attestation-secret-provision/secret_provision/policy_file/: policy_no_kms.json  policy_template.json  policy_vault.json
cczoo/attestation-secret-provision/secret_provision/src/: CMakeLists.txt  kms_agent.cpp  kms_agent.hpp  policy_manager.cpp  policy_manager.hpp
cczoo/lr_infer_he_sgx/: Anolisos.dockerfile  CMakeLists.txt  Dockerfile  Makefile  README.md  build_docker_image.sh  infer_server.manifest.template  start_container.sh  start_service.sh
cczoo/lr_infer_he_sgx/cmake/: gflags.cmake  grpc.cmake  gtest.cmake  seal.cmake
cczoo/lr_infer_he_sgx/datasets/: lrtest_mid_eval.csv  lrtest_mid_lrmodel.csv
cczoo/lr_infer_he_sgx/src/: CMakeLists.txt  infer_base.cpp  infer_base.hpp  infer_client.cpp  infer_client.hpp  infer_server.cpp  infer_server.hpp  inference.proto  param.cpp  param.hpp  utils.cpp  utils.hpp
cczoo/lr_infer_he_sgx/test/: CMakeLists.txt  unit_test.cpp
cczoo/openclaw-cc/tdx_utility/: pyproject.toml
tc-api/: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh  setup.sh  start.sh
tc-api/docs/: TESTING.md  architecture.md  overview_tasks.md
tc-api/docs/docktap/: api.md  architecture.md
tc-api/docs/trusted-log/: api.md  architecture.md
tc-api/examples/tc-client/: deploy.json
tc-api/openspec/specs/chain-initialization/: spec.md
tc-api/openspec/specs/chain-root-owner-attestation/: spec.md
tc-api/openspec/specs/daemon-api-internal-correlation/: spec.md
tc-api/openspec/specs/delegation-verification/: spec.md
tc-api/openspec/specs/docktap-bare-metal-launch/: spec.md
tc-api/openspec/specs/docktap-compose-service/: spec.md
tc-api/openspec/specs/docktap-health-endpoint/: spec.md
tc-api/openspec/specs/docktap-package-integration/: spec.md
tc-api/openspec/specs/docktap-runtime-engine-abstraction/: spec.md
tc-api/openspec/specs/docktap-trucon-commit/: spec.md
tc-api/openspec/specs/monorepo-layout/: spec.md
tc-api/openspec/specs/owner-key-dsse-signing/: spec.md
tc-api/openspec/specs/rekor-intoto-attestation-storage/: spec.md
tc-api/openspec/specs/session-delegation/: spec.md
tc-api/openspec/specs/tlog-commit-migration/: spec.md
tc-api/openspec/specs/tlog-package-layout/: spec.md
tc-api/scripts/: common.sh  run_docktap_oob_atomic.py  run_tests.ps1  setup.bat  show_rekor_entry.py  start.ps1  tdvm_smoke_test.py  verify_attested_head.py
tc-api/src/tc_api/: config.py  kbs_service.py  main.py  main.py.bak  models.py  services.py  services.py.bak  sigstore_baseline.py  tlog_client.py  verification_profiles.py
tc-api/tc_api/: verification_profiles.py
tc-api/tc_api/api/: __init__.py  delegation_support.py  sigstore_templates.py
tc-api/tc_api/cli/: verify.py  verify_replay.py
tc-api/tc_api/docktap/: config.py  main.py  preflight.py  trucon_client.py
tc-api/tc_api/identity/: oidc_preflight.py  sigstore_oauth.py
tc-api/tc_api/transparency/: dsse_builder.py  events.py  rekor_decode.py
tc-api/tc_api/trucon/: app.py  chain_verification.py  config.py  database.py  evidence.py  immutable_fanout.py  owner_attestation.py  submit_daemon.py
tc-api/tests/: test_api.py  test_attested_head_evidence_export.py  test_ccel.py  test_control_plane_trucon_integration.py  test_delegation_attestation_gate.py  test_delegation_integration.py  test_delegation_predicate.py  test_delegation_storage.py  test_delegation_submit.py  test_delegation_verification.py  test_idempotency.py  test_immutable_backend_fanout.py  test_init_chain.py  test_instance_mapping.py  test_lifecycle_states.py  test_non_tee_verification.py  test_observability_metrics.py  test_oci_bundle_mirror.py  test_owner_key_dsse_signing.py  test_real_oci_mirror_integration.py  test_real_rekor_integration.py  test_runner.py  test_sequencer_refactor.py  test_service_auth.py  test_sigstore_identity_requirements.py  test_simulated_tdx_e2e.py  test_status_response.py  test_subprocess_unit.py  test_tdx_quote_adapter.py  test_tlog_client_identity_token.py  test_tlog_client_regressions.py  test_tlog_impl.py  test_tlog_refactored.py  test_trucon_delegation_admission.py  test_trucon_internal_transport.py  test_two_level_digest.py  test_verification_profiles.py  test_verify_cli.py
tc-api/tests/docktap/: test_docktap_integration.py  test_proxy.py  test_proxy_response_handling.py  test_trucon_client.py  test_workload_chain_routing.py
tlog/: README.md  chain.sigstore.json  entry1.json  entry1_622754971.sigstore.json  entry2.json  entry2_622754990.sigstore.json  pyproject.toml
tlog-onchain/: README.md  pyproject.toml
tlog-onchain/src/tlog_onchain/: adapter.py
tlog-rekor/: README.md  pyproject.toml
tlog-rekor/src/tlog_rekor/: __init__.py  adapter.py
tlog-rekor/tlog_rekor/: adapter.py
tlog/tlog/: digest.py  errors.py  immutable.py  local_mr.py
(+1905 files in other folders)
