[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-api"
version = "0.1.0"
description = "Trusted Container Build and Publish Service"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
tc-api = "tc_api.main:main"
tc-trucon = "tc_api.trucon.app:main"
tc-verify = "tc_api.cli.verify:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]