[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-api"
version = "0.1.0"
description = "Trusted Container Build and Publish Service"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]
# tlog and tlog-rekor are installed as editable local packages
# (pip install -e tlog/ -e tlog-rekor/)

[project.scripts]
tc-api = "tc_api.main:main"
tc-trucon = "tc_api.trucon.app:main"
tc-docktap = "tc_api.docktap.main:main"
tc-verify = "tc_api.cli.verify:main"
tc-oidc-preflight = "tc_api.oidc_preflight:main"
tc-oidc-verification-code = "tc_api.cli.oidc_verification_code:main"
tc-client = "tc_api.cli.client:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"integration: opt-in or broader workflow tests that may require external services",
]