[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlog-onchain"
version = "0.1.0"
description = "On-chain backend adapter for tlog ImmutableLogAdapter"
requires-python = ">=3.11"
dependencies = [
    "tlog",
]

[tool.setuptools.packages.find]
include = ["tlog_onchain*"]
