[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlog-rekor"
version = "0.1.0"
description = "Sigstore/Rekor backend adapter for tlog ImmutableLogAdapter"
requires-python = ">=3.11"
dependencies = [
    "tlog",
    "sigstore>=3.0.0",
    "sigstore-rekor-types",
    "cryptography>=41.0.0",
    "requests",
]

[tool.setuptools.packages.find]
include = ["tlog_rekor*"]
